--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,18 @@ on:
     pull_request:
 
 jobs:
+    lint:
+        name: Docker Lint
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v3
+          - name: Lint Dockerfile
+            uses: hadolint/hadolint-action@v2.1.0
+            with:
+                dockerfile: Dockerfile
+                verbose: true
+                ignore: DL3018 # Ignore version in apk add
     build:
         name: Docker build
         runs-on: ubuntu-latest
